<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- icono izquierdo (ej: grúa) -->
    <item
        android:id="@+id/action_tow"
        android:icon="@drawable/caradd"
        android:title="@string/agregar_vehiculo"
        app:showAsAction="always" />

    <!-- espacio para que quede centrado con el FAB (opcional) -->
    <item
        android:id="@+id/spacer"
        android:title=""
        app:showAsAction="never" />

    <!-- icono $ -->
    <item
        android:id="@+id/action_money"
        android:icon="@drawable/expenses"
        android:title="@string/gastos"
        app:showAsAction="always" />

    <!-- menu hamburguesa -->
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/menu"
        android:title="@string/cerrar_sesion"
        app:showAsAction="always" />

</menu>
