<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.insurance.InsuranceFormFragment">
<ScrollView
    android:id="@+id/insuranceFormScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.car.CarFormFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addInsuranceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/anadir_seguro"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/titleUnderline"
                android:layout_width="140dp"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/button" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insuranceNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/aseguradora"
            android:textColorHint="@color/gray_light"
            app:placeholderText="@string/seguro_ejemplo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insuranceNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insurancePolicyNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/n_de_poliza"
            android:textColorHint="@color/gray_light"
            app:placeholderText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insurancePolicyNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insuranceExpirationDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/fecha_de_expiracion"
            android:textColorHint="@color/gray_light"
            app:placeholderText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insuranceExpirationDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insuranceCoverageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/cobertura"
            android:textColorHint="@color/gray_light"
            app:placeholderText="@string/cobertura_ejemplo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insuranceCoverageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/engineNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/n_de_motor"
            android:textColorHint="@color/gray_light"
            app:placeholderText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/engineNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/chassisNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/n_de_chasis"
            android:textColorHint="@color/gray_light"
            app:placeholderText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/chassisNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ownerNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/titular_de_la_poliza"
            android:textColorHint="@color/gray_light"
            app:placeholderText="@string/nombre_apellido">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ownerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSelectFile"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_tarjeta"
                android:textColor="@color/button"
                app:icon="@drawable/doc_icon"
                app:iconTint="@color/button" />


            <TextView
                android:id="@+id/fileNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ellipsize="middle"
                android:maxLines="1"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                tools:text="poliza_seguro_2025.pdf" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteInsurance"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="0dp"
            android:text="@string/eliminar_seguro"
            android:textColor="@android:color/holo_red_dark"
            app:icon="@drawable/ic_delete"
            app:iconTint="@android:color/holo_red_dark"
            app:strokeColor="@android:color/holo_red_dark"
            android:visibility="gone"
            tools:visibility="visible" />

        <Space
            android:id="@+id/bottomSpacer"
            android:layout_width="match_parent"
            android:layout_height="40dp" />



    </LinearLayout>

</ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveInsuranceFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/button"
        app:srcCompat="@drawable/ic_check"
        app:tint="@android:color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>